Интерфейс "Преподаватель": 1. Добавлена кнопка "Вернуться к списку ведомостей" с явным предупреждением при попытке уйти со страницы редактирования ведомости без сохранения изменений. 2. В списке студентов добавлен столбец "№ п.п." (по алфавитному порядку) для быстрой сверки актуальности соответствия журнала ведомости 3. В списке студентов изменено выравнивание ФИО по левому краю. 4. В списке аттестаций помечаются символом "!" те аттестации, где имеются незаполненные ведомости; 5. В поле "Оценивание" добавлена возможность автоматически устанавливать значение для всех студентов (автоматически проставляется выбранная "Оценка" всем студентам)

--- a/src/main/resources/static/Templates/attestation.html
+++ b/src/main/resources/static/Templates/attestation.html
@@ -9,9 +9,10 @@
         <table class="ng-hide table table-hover table-responsive-sm m-0 p-0" ng-show="attestations.length">
             <thead>
                 <tr>
+                    <th class="text-center border-white"></th>
                     <th class="text-center border-white">Название</th>
                     <th class="text-center border-white">Факультет</th>
-                    <th class="text-center border-white">Крайний срок сдачи
+                    <th class="text-center border-white">Крайний срок внесения изменений
                         <!--<br>(не включая)-->
                         <!--<i class="fa fa-info-circle" data-toggle="tooltip" data-placement="top"
                            title="Внимание! Если дедлайн поставлен на 02.09.2020, то изменения можно внести до 0.00 мск 02.09.2020"></i>-->
@@ -28,6 +29,11 @@
             </thead>
             <tbody class="bg-aqua-gradient">
                 <tr ng-repeat="attestation in attestations | orderBy:'id'" class="border-top">
+                    <td class="text-center border-info">
+                        <i class="text-warning fa fa-2x fa-exclamation px-2" ng-if="!attestation.finished" data-toggle="tooltip" data-placement="top"
+                           title="Внимание! Остались незаполненные ведомости">
+                        </i>
+                    </td>
                     <td class="text-center border-info">{{attestation.name}}</td>
                     <td class="text-center border-info">{{attestation.faculty.shortName}} ({{attestation.faculty.fullName}})</td>
                     <td class="text-center border-info">
