--- a/src/main/resources/static/Templates/viewAttestationsDeanery.html
+++ b/src/main/resources/static/Templates/viewAttestationsDeanery.html
@@ -9,7 +9,7 @@
                 <tr>
                     <th class="text-center border-white"></th>
                     <th class="text-center border-white">Название аттестации</th>
-                    <th class="text-center border-white">Крайний срок сдачи
+                    <th class="text-center border-white">Крайний срок внесения изменений
                         <i class="fa fa-info-circle text-info" data-toggle="tooltip" data-placement="top"
                            title="До этой даты (не включая) у преподавателей имеется возможность вносить изменения в ведомости">
                         </i>
