--- a/src/main/resources/static/Templates/sessionStatementDeanery.html
+++ b/src/main/resources/static/Templates/sessionStatementDeanery.html
@@ -10,7 +10,7 @@
         <div class="font-weight-bold h3 text-center" ng-show="disciplineName || splitAttestationForm || deadlineDiscipline">
             <pre ng-show="disciplineName">Дисциплина:<div class="badge bg-aqua-gradient">{{disciplineName}}</div></pre>
             <pre ng-show="splitAttestationForm">Форма аттестации:<div class="badge bg-aqua-gradient">{{splitAttestationForm.name}}</div></pre>
-            <pre ng-show="deadlineDiscipline">Дедлайн:<div class="badge bg-aqua-gradient">{{deadlineDiscipline | date: 'dd.MM.yyyy'}}</div></pre>
+            <pre ng-show="deadlineDiscipline">Крайний срок внесения изменений в ведомость:<div class="badge bg-aqua-gradient">{{deadlineDiscipline | date: 'dd.MM.yyyy'}}</div></pre>
             <hr>
         </div>
 
